--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
     "fecha": "^4.2.1",
+    "jquery": "^3.6.0",
     "react": "^16.13.2",
     "react-bootstrap": "^2.1.2",
     "react-countdown": "^2.3.2",
+    "react-countup": "^6.1.1",
+    "react-crypto-chart": "^0.0.6",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^16.13.2",
     "react-icons": "^4.3.1",
