--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "normalize-url": "^5.3.0",
+    "request-ip": "^2.1.3",
     "socket.io": "^4.4.1",
     "web3": "^1.7.0"
   },
