--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,21 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@visx/axis": "^2.6.0",
+    "@visx/gradient": "^2.1.0",
+    "@visx/group": "^2.1.0",
+    "@visx/shape": "^2.4.0",
+    "@visx/xychart": "^2.9.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
     "fecha": "^4.2.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "react": "^16.13.2",
     "react-bootstrap": "^2.1.2",
+    "react-charts": "^2.0.0-beta.7",
     "react-countdown": "^2.3.2",
     "react-countup": "^6.1.1",
     "react-crypto-chart": "^0.0.6",
